# bde_demo

./: CMakeLists.txt  my_add.h  project.cmake
groups/hbl/doc/: hbl.txt
groups/hbl/group/: hbl.mem
groups/hbl/hblr/: hblr_demo.cpp  hblr_demo.h
groups/hbl/hblr/doc/: hblr.txt
groups/hbl/hblr/package/: hblr.cmake  hblr.mem
standalones/my_add/: my_add.cpp
